src/ebnf2y/demo/y.output

state 0
	$accept: .Start $end 
	Factor1: .    (12)

	'^'  shift 7
	'-'  shift 9
	'+'  shift 10
	'!'  shift 8
	.  reduce 12 (src line 136)

	Expression  goto 2
	Factor  goto 4
	Factor1  goto 5
	Factor11  goto 6
	Start  goto 1
	Term  goto 3

state 1
	$accept:  Start.$end 

	$end  accept
	.  error


state 2
	Start:  Expression.    (32)

	.  reduce 32 (src line 230)


state 3
	Expression:  Term.Expression1 
	Expression1: .    (2)

	.  reduce 2 (src line 86)

	Expression1  goto 11

state 4
	Term:  Factor.Term1 
	Term1: .    (34)

	.  reduce 34 (src line 242)

	Term1  goto 12

state 5
	Factor:  Factor1.Operand 

	BOOLEAN  shift 17
	FLOAT  shift 18
	IDENTIFIER  shift 22
	IMAGINARY  shift 19
	INTEGER  shift 20
	STR  shift 21
	'('  shift 16
	.  error

	Literal  goto 14
	Operand  goto 13
	QualifiedIdent  goto 15

state 6
	Factor1:  Factor11.    (13)

	.  reduce 13 (src line 141)


state 7
	Factor11:  '^'.    (14)

	.  reduce 14 (src line 146)


state 8
	Factor11:  '!'.    (15)

	.  reduce 15 (src line 151)


state 9
	Factor11:  '-'.    (16)

	.  reduce 16 (src line 155)


state 10
	Factor11:  '+'.    (17)

	.  reduce 17 (src line 159)


state 11
	Expression:  Term Expression1.    (1)
	Expression1:  Expression1.Expression11 Term 

	'^'  shift 24
	'|'  shift 25
	'-'  shift 26
	'+'  shift 27
	.  reduce 1 (src line 80)

	Expression11  goto 23

state 12
	Term:  Factor Term1.    (33)
	Term1:  Term1.Term11 Factor 

	AND  shift 36
	ANDNOT  shift 29
	LSH  shift 31
	RSH  shift 32
	'&'  shift 30
	'%'  shift 33
	'/'  shift 34
	'*'  shift 35
	.  reduce 33 (src line 236)

	Term11  goto 28

state 13
	Factor:  Factor1 Operand.    (11)

	.  reduce 11 (src line 130)


state 14
	Operand:  Literal.    (24)

	.  reduce 24 (src line 190)


state 15
	Literal:  QualifiedIdent.    (20)
	Operand:  QualifiedIdent.'(' Operand1 ')' 

	'('  shift 37
	.  reduce 20 (src line 173)


state 16
	Operand:  '('.Expression ')' 
	Factor1: .    (12)

	'^'  shift 7
	'-'  shift 9
	'+'  shift 10
	'!'  shift 8
	.  reduce 12 (src line 136)

	Expression  goto 38
	Factor  goto 4
	Factor1  goto 5
	Factor11  goto 6
	Term  goto 3

state 17
	Literal:  BOOLEAN.    (18)

	.  reduce 18 (src line 164)


state 18
	Literal:  FLOAT.    (19)

	.  reduce 19 (src line 169)


state 19
	Literal:  IMAGINARY.    (21)

	.  reduce 21 (src line 177)


state 20
	Literal:  INTEGER.    (22)

	.  reduce 22 (src line 181)


state 21
	Literal:  STR.    (23)

	.  reduce 23 (src line 185)


state 22
	QualifiedIdent:  IDENTIFIER.QualifiedIdent1 
	QualifiedIdent1: .    (30)

	'.'  shift 40
	.  reduce 30 (src line 220)

	QualifiedIdent1  goto 39

state 23
	Expression1:  Expression1 Expression11.Term 
	Factor1: .    (12)

	'^'  shift 7
	'-'  shift 9
	'+'  shift 10
	'!'  shift 8
	.  reduce 12 (src line 136)

	Factor  goto 4
	Factor1  goto 5
	Factor11  goto 6
	Term  goto 41

state 24
	Expression11:  '^'.    (4)

	.  reduce 4 (src line 96)


state 25
	Expression11:  '|'.    (5)

	.  reduce 5 (src line 101)


state 26
	Expression11:  '-'.    (6)

	.  reduce 6 (src line 105)


state 27
	Expression11:  '+'.    (7)

	.  reduce 7 (src line 109)


state 28
	Term1:  Term1 Term11.Factor 
	Factor1: .    (12)

	'^'  shift 7
	'-'  shift 9
	'+'  shift 10
	'!'  shift 8
	.  reduce 12 (src line 136)

	Factor  goto 42
	Factor1  goto 5
	Factor11  goto 6

state 29
	Term11:  ANDNOT.    (36)

	.  reduce 36 (src line 252)


state 30
	Term11:  '&'.    (37)

	.  reduce 37 (src line 257)


state 31
	Term11:  LSH.    (38)

	.  reduce 38 (src line 261)


state 32
	Term11:  RSH.    (39)

	.  reduce 39 (src line 265)


state 33
	Term11:  '%'.    (40)

	.  reduce 40 (src line 269)


state 34
	Term11:  '/'.    (41)

	.  reduce 41 (src line 273)


state 35
	Term11:  '*'.    (42)

	.  reduce 42 (src line 277)


state 36
	Term11:  AND.    (43)

	.  reduce 43 (src line 281)


state 37
	Operand:  QualifiedIdent '('.Operand1 ')' 
	Operand1: .    (27)
	Factor1: .    (12)

	'^'  shift 7
	'-'  shift 9
	'+'  shift 10
	'!'  shift 8
	')'  reduce 27 (src line 204)
	.  reduce 12 (src line 136)

	Expression  goto 45
	ExpressionList  goto 44
	Factor  goto 4
	Factor1  goto 5
	Factor11  goto 6
	Operand1  goto 43
	Term  goto 3

state 38
	Operand:  '(' Expression.')' 

	')'  shift 46
	.  error


state 39
	QualifiedIdent:  IDENTIFIER QualifiedIdent1.    (29)

	.  reduce 29 (src line 214)


state 40
	QualifiedIdent1:  '.'.IDENTIFIER 

	IDENTIFIER  shift 47
	.  error


state 41
	Expression1:  Expression1 Expression11 Term.    (3)

	.  reduce 3 (src line 91)


state 42
	Term1:  Term1 Term11 Factor.    (35)

	.  reduce 35 (src line 247)


state 43
	Operand:  QualifiedIdent '(' Operand1.')' 

	')'  shift 48
	.  error


state 44
	Operand1:  ExpressionList.    (28)

	.  reduce 28 (src line 209)


state 45
	ExpressionList:  Expression.ExpressionList1 
	ExpressionList1: .    (9)

	.  reduce 9 (src line 120)

	ExpressionList1  goto 49

state 46
	Operand:  '(' Expression ')'.    (26)

	.  reduce 26 (src line 199)


state 47
	QualifiedIdent1:  '.' IDENTIFIER.    (31)

	.  reduce 31 (src line 225)


state 48
	Operand:  QualifiedIdent '(' Operand1 ')'.    (25)

	.  reduce 25 (src line 195)


state 49
	ExpressionList:  Expression ExpressionList1.    (8)
	ExpressionList1:  ExpressionList1.',' Expression 

	','  shift 50
	.  reduce 8 (src line 114)


state 50
	ExpressionList1:  ExpressionList1 ','.Expression 
	Factor1: .    (12)

	'^'  shift 7
	'-'  shift 9
	'+'  shift 10
	'!'  shift 8
	.  reduce 12 (src line 136)

	Expression  goto 51
	Factor  goto 4
	Factor1  goto 5
	Factor11  goto 6
	Term  goto 3

state 51
	ExpressionList1:  ExpressionList1 ',' Expression.    (10)

	.  reduce 10 (src line 125)


26 terminals, 18 nonterminals
44 grammar rules, 52/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
67 working sets used
memory: parser 50/240000
27 extra closures
49 shift entries, 2 exceptions
22 goto entries
17 entries saved by goto default
Optimizer space used: output 52/240000
52 table entries, 1 zero
maximum spread: 26, maximum offset: 50
